--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-scripts": "5.0.0",
+    "react-share": "^4.4.0",
+    "react-share-social": "^0.1.48",
+    "react-video-player": "^1.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
