--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-lazyload": "^3.2.0",
+    "react-loader-spinner": "^5.0.6",
     "react-player": "^2.9.0",
     "react-scripts": "5.0.0",
     "react-share": "^4.4.0",
     "react-share-social": "^0.1.48",
+    "react-spinners": "^0.11.0",
     "react-video-player": "^1.0.0",
     "web-vitals": "^2.1.3"
   },
